--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Penn Course Review Experiment</title>
     <meta name="description" content="">
+    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css'>
     <link rel='stylesheet' href='/styles/styles.css' />
     </head>
   <body>
     <h1 class="title">Penn Course Review</h1>
-    <div id="container">
-      Search...
+    <div class="container">
+      <div id="bloodhound">
+        <input class="typeahead" type="text" placeholder="Search for courses...">
+      </div>
     </div>
   </body>
+  <footer>
+    <script src="/js/vendor/jquery.min.js"></script>
+    <script src="/js/vendor/typeahead.bundle.min.js"></script>
+    <script src="/js/index.js"></script>
+  </footer>
 </html>
