--- a/views/instructor.ejs
+++ b/views/instructor.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Penn Course Review Experiment</title>
-    <meta name="description" content="">
-    <link rel='stylesheet' href='/styles/styles.css' />
-    </head>
-  <body>
-    <h1 class="title">Penn Course Review</h1>
-    <h2><%= instructor.name %></h2>
-    <pre><%= JSON.stringify(instructor) %></pre>
-  </body>
-</html>
+<%- include('header') %>
+<h1 class="title">Penn Course Review</h1>
+<h2><%= instructor.name %></h2>
+<pre><%= JSON.stringify(instructor) %></pre>
+<%- include('footer') %>
