--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Penn Course Review Experiment</title>
-    <meta name="description" content="">
-    <link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='/styles/styles.css' />
-    </head>
-  <body>
-    <h1 class="title">Penn Course Review</h1>
-    <div class="container">
-      <div id="bloodhound">
-        <input class="typeahead" type="text" placeholder="Search for courses...">
-      </div>
-    </div>
-  </body>
-  <footer>
-    <script src="/js/vendor/jquery.min.js"></script>
-    <script src="/js/vendor/typeahead.bundle.min.js"></script>
-    <script src="/js/index.js"></script>
-  </footer>
-</html>
+<%- include('header') %>
+<h1 class="title">Penn Course Review</h1>
+<div id="bloodhound">
+  <input class="typeahead" type="text" placeholder="Search for courses...">
+</div>
+<div class="row">
+  <div class="col-sm-5">
+    <h3>Welcome!</h3>
+    <p>Welcome to the Penn Course Review experiment!</p>
+    <p>The student-run Penn Course Review has served as a valuable guide for course selection since the 1960s. Now, we have completely redesigned the experience, making it even easier to look for your classes and professors. We hope you will enjoy it!</p>
+    <p>Interested in building something on the Penn Course Review API? <a href="https://docs.google.com/spreadsheet/viewform?hl=en_US&formkey=dGZOZkJDaVkxdmc5QURUejAteFdBZGc6MQ#gid=0">Request API access</a></p>
+  </div>
+  <div class="col-sm-4 col-sm-offset-2">
+    <h3>Questions?</h3>
+    <p>If you have any questions, please email the author, <a href="mailto:adelq@seas.upenn.edu">Adel Qalieh</a></p>
+  </div>
+</div>
+<%- include('footer') %>
