--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,6 +5,7 @@
   <footer>
     <script src="/js/vendor/jquery.min.js"></script>
     <script src="/js/vendor/typeahead.bundle.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
     <script src="/js/index.js"></script>
   </footer>
 </html>
