--- a/views/course.ejs
+++ b/views/course.ejs
@@ -4,9 +4,7 @@
 <div class="row">
 <div class="col-sm-8">
   <h3><%= course.name %></h3>
-  <% if (comments) { %>
-    <p><%= comments %></p>
-  <% } %>
+  <p><%= comments %></p>
 </div>
 <div class="col-sm-4">
 <h3>Average</h3>
@@ -24,7 +22,7 @@
   </div>
 </div>
 </div>
-<table class="table">
+<table class="table table-hover">
   <thead>
     <tr>
       <td>Course</td>
