--- a/views/course.ejs
+++ b/views/course.ejs
@@ -20,6 +20,22 @@
     <small>Difficulty</small>
     <p><%= reviews.rDifficulty.toFixed(1) %></p>
   </div>
+<br>
+<br>
+<br>
+<h3>Most Recent</h3>
+  <div class="box">
+    <small>Course</small>
+    <p><%= mostRecent(history, 'rCourseQuality') %></p>
+  </div>
+  <div class="box">
+    <small>Instructor</small>
+    <p><%= mostRecent(history, 'rInstructorQuality') %></p>
+  </div>
+  <div class="box">
+    <small>Difficulty</small>
+    <p><%= mostRecent(history, 'rDifficulty') %></p>
+  </div>
 </div>
 </div>
 <table class="table table-hover">
